--- a/views/references.html
+++ b/views/references.html
@@ -1,56 +1,72 @@
-<style>
-	.CLASS .reference * { transition: all 0.5s; }
-	.CLASS .reference a { position: relative; display: block; color: gray; }
-	.CLASS .reference a:hover { text-decoration: none !important; }
-	.CLASS .reference a:hover * { text-decoration: none; }
-	.CLASS .reference a:hover span { background-color: #F0F0F0; color: black; }
-	.CLASS .reference-title { display: block; padding: 10px 0; background-color: #F8F8F8; text-align: center; font-size: 12px; }
-	.CLASS .reference b { display: block; font-size: 14px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
-	.CLASS .reference { margin-bottom: 30px; }
-</style>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
-
-<ui-plugin path="~PATH~" class="CLASS">
-	<div style="padding: 40px">
-		<h1>References</h1>
-		<div class="row">
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
-			</div>
-			<div class="col-md-3 col-sm-6 col-xs-6 reference">
-				<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=10" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="robots" content="all,follow" />
+	<link rel="stylesheet" href="/public/css/default.css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,700&subset=latin,latin-ext" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//cdn.componentator.com/spa.min.css" />
+	<link href="//cdn.componentator.com/spa.min@19pro.css" rel="stylesheet" />
+	<script src="//cdn.componentator.com/spa.min@19.js"></script>
+	<style>
+		.CLASS .reference * { transition: all 0.5s; }
+		.CLASS .reference a { position: relative; display: block; color: gray; }
+		.CLASS .reference a:hover { text-decoration: none !important; }
+		.CLASS .reference a:hover * { text-decoration: none; }
+		.CLASS .reference a:hover span { background-color: #F0F0F0; color: black; }
+		.CLASS .reference-title { display: block; padding: 10px 0; background-color: #F8F8F8; text-align: center; font-size: 12px; }
+		.CLASS .reference b { display: block; font-size: 14px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
+		.CLASS .reference { margin-bottom: 30px; }
+	</style>
+</head>
+<body>
+	<ui-plugin path="~PATH~" class="CLASS">
+		<div style="padding: 40px">
+			<h1>References</h1>
+			<div class="row">
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-6 reference">
+					<a href="#"><img src="/public/img/reference.png" class="img-responsive" alt="" /><span class="reference-title"><b>Lorem Ipsum</b><span>Lorem Ipsum Alias</span></span></a>
+				</div>
 			</div>
 		</div>
-	</div>
-</ui-plugin>
+	</ui-plugin>
+</body>
+</html>
